Add `binmeDecode` method and update `binmeEncode` implementation
- Added `binmeDecode` for decoding binary structures with header and body sections.
- Updated `binmeEncode` to include detailed header and body compression logic.
- Integrated `pako` dependency for compression utilities.
- Updated `package.json` with `pako` and its type definitions.

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/web-bluetooth": "^0.0.21",
     "i18next": "^25.7.3",
     "jquery": "^3.7.1",
-    "notiflix": "^3.2.8"
+    "notiflix": "^3.2.8",
+    "pako": "^2.1.0"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.33",
+    "@types/pako": "^2.0.4",
     "ts-loader": "^9.5.4",
     "typescript": "^5.5.3",
     "webpack": "^5.104.1",
